# W11Boost-rust

./: Cargo.toml  NOTES.adoc  README.adoc  build.rs
src/: common.rs  gui.rs  macros.rs  main.rs  resource.rs
src/gui/: appx_support.rs  common.rs  create_system_restore_point.rs  defaults.rs  reduce_local_data_collection.rs  reduce_online_data_collection.rs
