cargo-features = ["edition2024"]

[package]
name = "W11Boost"
version = "0.0.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
CompanyName = "felikcat"
FileDescription = "https://github.com/felikcat/W11Boost"
FileVersion = "1.3.0.0"
LegalCopyright = "© 2024 felikcat, AGPL3 License"
OriginalFilename = "W11Boost.exe"
ProductName = "W11Boost"
ProductVersion = "1.3.0.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_System_WindowsProgramming",
    "Win32_System_Environment"
]