[package]
name = "W11Boost"
version = "1.3.0"
edition = "2024"
build = "build.rs"

[dependencies]
fltk-theme = "0.7"
curl = "0.4.47"

[dependencies.winsafe]
version = "0.0.22"
features = [
    "shell",
    "advapi"
]

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies.fltk]
version = "^1.4"
features = [
    "use-ninja"
]

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
CompanyName = "felikcat"
FileDescription = "https://github.com/felikcat/W11Boost"
FileVersion = "1.3.0.0"
LegalCopyright = "© 2024 felikcat, AGPL3 License"
OriginalFilename = "W11Boost.exe"
ProductName = "W11Boost"
ProductVersion = "1.3.0.0"
